// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MdInput Component Should render text onto textbox when user types 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Preview
    </button>
    <textarea
      data-testid="textbox"
      placeholder="Type something..."
      style="padding: 1rem; width: 100%; margin-top: .6rem;"
    >
      Javascript
    </textarea>
  </div>
</div>
`;

exports[`MdInput Component Should switch to Preview mode when user clicks Preview button 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Preview
    </button>
    <span
      data-testid="markdown"
      style="padding: 1rem; width: 100%; margin-top: 0px; display: block;"
    />
  </div>
</div>
`;

exports[`MdInput Component Should switch to Write mode when user clicks Write button 1`] = `
<div>
  <div>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Write
    </button>
    <button
      class="btn"
      style="color: rgb(41, 41, 41);"
    >
      Preview
    </button>
    <textarea
      data-testid="textbox"
      placeholder="Type something..."
      style="padding: 1rem; width: 100%; margin-top: .6rem;"
    />
  </div>
</div>
`;
